--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Adds filtering by ranges of dates in the admin filter sidebar.
+This is an incredible project which Adds filtering by ranges of dates in the admin filter sidebar.
 
 https://github.com/coolchevy/django-datefilterspec
 
